paper_experimental_results/2026-05-10T00-24-35/grok-code-fast-1/declarations/enum_specifiers/sample_004/target.compile.log
warning: value assigned to `col` is never read
  --> benchmark_results/2026-05-10T00-24-35/grok-code-fast-1/declarations/enum_specifiers/sample_004/target.rs:53:5
   |
53 |     col = Hue::WineDark;
   |     ^^^
   |
   = help: maybe it is overwritten before being read?
   = note: `#[warn(unused_assignments)]` (part of `#[warn(unused)]`) on by default

error[E0506]: cannot assign to `col` because it is borrowed
  --> benchmark_results/2026-05-10T00-24-35/grok-code-fast-1/declarations/enum_specifiers/sample_004/target.rs:53:5
   |
40 |     let cp = &col;
   |              ---- `col` is borrowed here
...
53 |     col = Hue::WineDark;
   |     ^^^^^^^^^^^^^^^^^^^ `col` is assigned to here but it was already borrowed
54 |     if check_vals(*cp) != 13 {
   |                   --- borrow later used here

error: aborting due to 1 previous error; 1 warning emitted

For more information about this error, try `rustc --explain E0506`.